Revert "Upgraded FileBot to version 4.9.0."
This reverts commit c69a1fdfb3cd8584a2b78b87f03ee9a5df512fbc.