@@ -11,14 +11,13 @@ FROM jlesage/baseimage-gui:alpine-3.11-v3.5.3
 ARG DOCKER_IMAGE_VERSION=unknown
 
 # Define software versions.
-ARG FILEBOT_VERSION=4.9.0
-ARG OPENJDK_VERSION=13.0.2
-ARG ZULU_OPENJDK_VERSION=13.29.9
+ARG FILEBOT_VERSION=4.8.5
+ARG OPENJFX_VERSION=8.151.12-r0
 ARG CHROMAPRINT_VERSION=1.4.3
 
 # Define software download URLs.
 ARG FILEBOT_URL=https://get.filebot.net/filebot/FileBot_${FILEBOT_VERSION}/FileBot_${FILEBOT_VERSION}-portable.tar.xz
-ARG OPENJDK_URL=https://cdn.azul.com/zulu/bin/zulu${ZULU_OPENJDK_VERSION}-ca-jdk${OPENJDK_VERSION}-linux_musl_x64.tar.gz
+ARG OPENJFX_URL=https://github.com/sgerrand/alpine-pkg-java-openjfx/releases/download/${OPENJFX_VERSION}/java-openjfx-${OPENJFX_VERSION}.apk
 ARG CHROMAPRINT_URL=https://github.com/acoustid/chromaprint/archive/v${CHROMAPRINT_VERSION}.tar.gz
 
 # Define working directory.
@@ -37,52 +36,12 @@ RUN \
     del-pkg build-dependencies && \
     rm -rf /tmp/* /tmp/.[!.]*
 
-# Build custom Java runtime image.
-RUN \
-    add-pkg --virtual build-dependencies \
-        curl \
-        && \
-    mkdir /tmp/jdk/ && \
-    # Download and extract.
-    curl -# -L "${OPENJDK_URL}" | tar xz --strip 1 -C /tmp/jdk && \
-    # Extract Java module dependencies.
-    for JAR in /opt/filebot/jar/*.jar; do \
-        echo "Getting dependencies of $JAR..."; \
-        /tmp/jdk/bin/jdeps $JAR 2>/dev/null | grep -v $(basename $JAR) | grep -v 'JDK internal API' | grep -v 'not found' | awk '{ print $4 }'| sort -u >> /tmp/jdeps; \
-    done && \
-    echo jdk.crypto.ec >> /tmp/jdeps && \
-    echo jdk.zipfs >> /tmp/jdeps && \
-    echo jdk.unsupported >> /tmp/jdeps && \
-    # Create a minimal Java install.
-    /tmp/jdk/bin/jlink \
-        --compress=2 \
-        --module-path /tmp/jdk/jmods \
-        --add-modules "$(cat /tmp/jdeps | sort -u | tr '\n' ',')" \
-        --output /opt/filebot/jre \
-        && \
-    # Cleanup.
-    del-pkg build-dependencies && \
-    rm -rf /tmp/* /tmp/.[!.]*
-
-# Install Java JNA.
-# Note that we only need the .so library.
-RUN \
-    add-pkg --repository http://dl-cdn.alpinelinux.org/alpine/edge/main \
-            --repository http://dl-cdn.alpinelinux.org/alpine/edge/community \
-            --virtual build-dependencies \
-            java-jna-native && \
-    cp -a /usr/lib/libjnidispatch.so /usr/lib/libjnidispatch.so.bk && \
-    cp -a /usr/lib/libjnidispatch.so.5.1.0 /usr/lib/libjnidispatch.so.5.1.0.bk && \
-    # Cleanup.
-    del-pkg build-dependencies && \
-    rm -rf /tmp/* /tmp/.[!.]* && \
-    # Restore library.
-    mv /usr/lib/libjnidispatch.so.bk /usr/lib/libjnidispatch.so && \
-    mv /usr/lib/libjnidispatch.so.5.1.0.bk /usr/lib/libjnidispatch.so.5.1.0
-
 # Install dependencies.
 RUN \
     add-pkg --virtual build-dependencies curl && \
+    # OpenJFX
+    curl -# -L -o java-openjfx.apk ${OPENJFX_URL} && \
+    apk --no-cache add --allow-untrusted ./java-openjfx.apk && \
     add-pkg \
         p7zip \
         unrar \
@@ -90,10 +49,12 @@ RUN \
         coreutils \
         nss \
         gtk+2.0 \
+        openjdk8-jre \
+        java-jna \
         libmediainfo \
-        ffmpeg \
-        yad \
         && \
+    # YAD
+    add-pkg yad && \
     # Cleanup.
     del-pkg build-dependencies && \
     rm -rf /tmp/* /tmp/.[!.]*
@@ -127,7 +88,9 @@ RUN \
     rm /usr/lib/pkgconfig/libchromaprint.pc \
        /usr/include/chromaprint.h \
        && \
-    rmdir /usr/include && \
+    rmdir /usr/include \
+          /usr/lib/pkgconfig \
+          && \
     rm -rf /tmp/* /tmp/.[!.]*
 
 # Adjust the openbox config.
